<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rex.hwong.openeyes.ui.activity.MainActivity">

    <include
        android:id="@+id/title_bar"
        layout="@layout/activity_title"
        />

    <View
        android:id="@+id/title_bar_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:visibility="gone"
        android:background="@android:color/black"/>

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RadioGroup
        android:id="@+id/menu_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFFFFFFF"
        android:gravity="bottom"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/menu_select"
            style="@style/MenuRadioButton"
            android:drawableTop="@drawable/ic_tab_strip_feed_selector"
            android:text="@string/menu_select"/>

        <RadioButton
            android:id="@+id/menu_find"
            style="@style/MenuRadioButton"
            android:drawableTop="@drawable/ic_tab_strip_category_selector"
            android:text="@string/menu_find"/>

        <RadioButton
            android:id="@+id/menu_author"
            style="@style/MenuRadioButton"
            android:drawableTop="@drawable/ic_tab_strip_pgc_selector"
            android:text="@string/menu_author"/>

        <RadioButton
            android:id="@+id/menu_self"
            style="@style/MenuRadioButton"
            android:drawableTop="@drawable/ic_tab_strip_profile_selector"
            android:text="@string/menu_self"/>

    </RadioGroup>

</LinearLayout>
